[gd_scene load_steps=32 format=3 uid="uid://bngmgtqp8g2v7"]

[ext_resource type="Texture2D" uid="uid://buvk8ef0aib24" path="res://icon.svg" id="1_pr334"]
[ext_resource type="Script" uid="uid://v5khcip2ifqr" path="res://scripts/food_label_container.gd" id="1_yn76w"]
[ext_resource type="Texture2D" uid="uid://cawkgrsbabswl" path="res://circle.svg" id="2_5pgwc"]
[ext_resource type="Script" uid="uid://drlv8n03jbat5" path="res://scripts/head.gd" id="2_7a6am"]
[ext_resource type="Script" uid="uid://q40ggwh0ph38" path="res://scripts/lizard.gd" id="2_ma6is"]
[ext_resource type="Script" uid="uid://bbamn5igjtpsh" path="res://scripts/segment.gd" id="3_7a6am"]
[ext_resource type="Script" uid="uid://dfgutltja0dwt" path="res://scripts/leg.gd" id="4_5pgwc"]
[ext_resource type="Texture2D" uid="uid://5xpkviq8q0po" path="res://head.svg" id="4_efa1y"]
[ext_resource type="Texture2D" uid="uid://bfak4gx5mlgfx" path="res://thought.svg" id="5_5n8gg"]
[ext_resource type="Texture2D" uid="uid://bvqtpa3bt83r0" path="res://eye.svg" id="5_42h6s"]
[ext_resource type="Script" uid="uid://liw0rbohdi4u" path="res://scripts/eye.gd" id="6_4p0gy"]
[ext_resource type="Texture2D" uid="uid://c1x3sfds2b2p0" path="res://feet.svg" id="9_ebtar"]
[ext_resource type="Script" uid="uid://b8m25278nwei" path="res://scripts/food_container.gd" id="12_yn76w"]
[ext_resource type="Script" uid="uid://c5j1yv01stv70" path="res://scripts/food_spawn_timer.gd" id="14_hvip4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5n8gg"]
size = Vector2(57, 150)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_maj5o"]
radius = 65.0
height = 240.0

[sub_resource type="Animation" id="Animation_17k7n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.22, 0.22)]
}

[sub_resource type="Animation" id="Animation_4p0gy"]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0.22, 0.05), Vector2(0.22, 0.22)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebtar"]
_data = {
&"RESET": SubResource("Animation_17k7n"),
&"blink": SubResource("Animation_4p0gy")
}

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_17k7n"]
target_nodepath = NodePath("RayCast2D/target")
flip_bend_direction = true
joint_one_bone_idx = 0
joint_one_bone2d_node = NodePath("Bone2D")
joint_two_bone_idx = 1
joint_two_bone2d_node = NodePath("Bone2D/Bone2D2")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_ebtar"]
enabled = false
target_nodepath = NodePath("RayCast2D/target")
joint_one_bone_idx = 0
joint_one_bone2d_node = NodePath("Bone2D")
joint_two_bone_idx = 1
joint_two_bone2d_node = NodePath("Bone2D/Bone2D2")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_ma6is"]
enabled = true
modification_count = 2
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_17k7n")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_ebtar")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_maj5o"]
target_nodepath = NodePath("RayCast2D/target")
flip_bend_direction = true
joint_one_bone_idx = 0
joint_one_bone2d_node = NodePath("Bone2D")
joint_two_bone_idx = 1
joint_two_bone2d_node = NodePath("Bone2D/Bone2D2")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_yn76w"]
enabled = false
target_nodepath = NodePath("RayCast2D/target")
joint_one_bone_idx = 0
joint_one_bone2d_node = NodePath("Bone2D")
joint_two_bone_idx = 1
joint_two_bone2d_node = NodePath("Bone2D/Bone2D2")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_hvip4"]
enabled = true
modification_count = 2
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_maj5o")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_yn76w")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_ma6is"]
target_nodepath = NodePath("RayCast2D/target")
flip_bend_direction = true
joint_one_bone_idx = 0
joint_one_bone2d_node = NodePath("Bone2D")
joint_two_bone_idx = 1
joint_two_bone2d_node = NodePath("Bone2D/Bone2D2")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_5n8gg"]
enabled = false
target_nodepath = NodePath("RayCast2D/target")
joint_one_bone_idx = 0
joint_one_bone2d_node = NodePath("Bone2D")
joint_two_bone_idx = 1
joint_two_bone2d_node = NodePath("Bone2D/Bone2D2")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_maj5o"]
enabled = true
modification_count = 2
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_ma6is")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_5n8gg")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_6bpy6"]
target_nodepath = NodePath("RayCast2D/target")
flip_bend_direction = true
joint_one_bone_idx = 0
joint_one_bone2d_node = NodePath("Bone2D")
joint_two_bone_idx = 1
joint_two_bone2d_node = NodePath("Bone2D/Bone2D2")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_q5rek"]
enabled = false
target_nodepath = NodePath("RayCast2D/target")
joint_one_bone_idx = 0
joint_one_bone2d_node = NodePath("Bone2D")
joint_two_bone_idx = 1
joint_two_bone2d_node = NodePath("Bone2D/Bone2D2")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_68mym"]
enabled = true
modification_count = 2
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_6bpy6")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_q5rek")

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 10
script = ExtResource("1_yn76w")

[node name="walls" type="Node2D" parent="."]

[node name="terrain2" type="StaticBody2D" parent="walls"]
position = Vector2(-47, 603)

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="walls/terrain2"]
position = Vector2(18.5, 65)
shape = SubResource("RectangleShape2D_5n8gg")

[node name="terrain3" type="StaticBody2D" parent="walls"]
position = Vector2(1291, 599)

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="walls/terrain3"]
position = Vector2(18.5, 65)
shape = SubResource("RectangleShape2D_5n8gg")

[node name="terrain" type="StaticBody2D" parent="walls"]
position = Vector2(643, 697)

[node name="Line2D" type="Line2D" parent="walls/terrain"]
points = PackedVector2Array(-418, -69, -495, -56, -657, 30, 668, 34, 615, -7, 491, -30, 343, -35, 134, -16, -105, -26)
closed = true
width = 5.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="walls/terrain"]
polygon = PackedVector2Array(-418, -69, -495, -56, -657, 30, 668, 34, 615, -7, 491, -30, 343, -35, 134, -16, -105, -26)

[node name="Sprite2D" type="Sprite2D" parent="walls/terrain"]
visible = false
scale = Vector2(10.165, 0.42)
texture = ExtResource("1_pr334")

[node name="lizard" type="Node2D" parent="."]
script = ExtResource("2_ma6is")

[node name="head" type="Sprite2D" parent="lizard" node_paths=PackedStringArray("food_container")]
top_level = true
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("2_7a6am")
food_container = NodePath("../../food_container")

[node name="hungry" type="Label" parent="lizard/head"]
offset_left = 344.0
offset_top = -1000.0
offset_right = 490.0
offset_bottom = -854.0
scale = Vector2(2, 2)
theme_override_font_sizes/font_size = 106
text = "üçó"

[node name="Sprite2D" type="Sprite2D" parent="lizard/head/hungry"]
position = Vector2(95, 113)
texture = ExtResource("5_5n8gg")

[node name="asleep" type="Label" parent="lizard/head"]
offset_left = 344.0
offset_top = -1000.0
offset_right = 490.0
offset_bottom = -854.0
scale = Vector2(2, 2)
theme_override_font_sizes/font_size = 106
text = "üåÉ"

[node name="Sprite2D" type="Sprite2D" parent="lizard/head/asleep"]
position = Vector2(95, 113)
texture = ExtResource("5_5n8gg")

[node name="Timer" type="Timer" parent="lizard/head"]
autostart = true

[node name="head_shape" type="Sprite2D" parent="lizard/head"]
scale = Vector2(2.1, 2.1)
texture = ExtResource("4_efa1y")
offset = Vector2(180, -64)

[node name="Area2D" type="Area2D" parent="lizard/head/head_shape"]
position = Vector2(161.905, -62.8571)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="lizard/head/head_shape/Area2D"]
position = Vector2(1, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_maj5o")

[node name="eye" type="Sprite2D" parent="lizard/head/head_shape"]
position = Vector2(101, -47)
scale = Vector2(0.22, 0.22)
texture = ExtResource("5_42h6s")
script = ExtResource("6_4p0gy")

[node name="Timer" type="Timer" parent="lizard/head/head_shape/eye"]
wait_time = 5.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="lizard/head/head_shape/eye"]
libraries = {
&"": SubResource("AnimationLibrary_ebtar")
}

[node name="RayCast2D" type="RayCast2D" parent="lizard/head"]
target_position = Vector2(0, 50000)

[node name="RayCast2D2" type="RayCast2D" parent="lizard/head"]
position = Vector2(5, 0)
target_position = Vector2(0, 50000)

[node name="segment2" type="Sprite2D" parent="lizard/head"]
top_level = true
position = Vector2(-27, 0)
scale = Vector2(1.1, 1.1)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="leg" type="Skeleton2D" parent="lizard/head/segment2"]
top_level = true
z_index = 1
modification_stack = SubResource("SkeletonModificationStack2D_ma6is")
script = ExtResource("4_5pgwc")

[node name="RayCast2D" type="RayCast2D" parent="lizard/head/segment2/leg"]
position = Vector2(100, 0)
target_position = Vector2(0, 5000)

[node name="target" type="Node2D" parent="lizard/head/segment2/leg/RayCast2D"]
top_level = true
position = Vector2(2, 26)

[node name="Bone2D" type="Bone2D" parent="lizard/head/segment2/leg"]
rotation = -1.81792
scale = Vector2(0.999938, 0.999938)
rest = Transform2D(-0.672349, -0.740187, 0.740187, -0.672349, 0, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Icon2" type="Sprite2D" parent="lizard/head/segment2/leg/Bone2D"]
position = Vector2(-4.91805, -8.05118)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_ebtar")

[node name="Bone2D2" type="Bone2D" parent="lizard/head/segment2/leg/Bone2D"]
position = Vector2(-4.91805, -8.05118)
rotation = -1.99227
scale = Vector2(0.999843, 0.999843)
rest = Transform2D(-0.478914, -0.877686, 0.877686, -0.478914, -16.4929, -9.64289)
auto_calculate_length_and_angle = false
length = 14.847
bone_angle = -84.2757
metadata/_local_pose_override_enabled_ = true

[node name="Icon" type="Sprite2D" parent="lizard/head/segment2/leg/Bone2D/Bone2D2"]
position = Vector2(1.08037, -15.5863)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_ebtar")

[node name="segment3" type="Sprite2D" parent="lizard/head/segment2"]
top_level = true
position = Vector2(-57, 0)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="leg2" type="Skeleton2D" parent="lizard/head/segment2/segment3"]
modulate = Color(0.741385, 0.741385, 0.741385, 1)
top_level = true
z_index = 1
modification_stack = SubResource("SkeletonModificationStack2D_hvip4")
script = ExtResource("4_5pgwc")

[node name="RayCast2D" type="RayCast2D" parent="lizard/head/segment2/segment3/leg2"]
position = Vector2(100, 0)
target_position = Vector2(0, 5000)

[node name="target" type="Node2D" parent="lizard/head/segment2/segment3/leg2/RayCast2D"]
top_level = true
position = Vector2(2, 26)

[node name="Bone2D" type="Bone2D" parent="lizard/head/segment2/segment3/leg2"]
rotation = -2.67001
scale = Vector2(0.999937, 0.999937)
rest = Transform2D(-0.672349, -0.740187, 0.740187, -0.672349, 0, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Icon2" type="Sprite2D" parent="lizard/head/segment2/segment3/leg2/Bone2D"]
position = Vector2(-4.91805, -8.05118)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_ebtar")

[node name="Bone2D2" type="Bone2D" parent="lizard/head/segment2/segment3/leg2/Bone2D"]
position = Vector2(-4.91805, -8.05118)
rotation = -0.648266
scale = Vector2(0.999846, 0.999846)
rest = Transform2D(-0.478914, -0.877686, 0.877686, -0.478914, -16.4929, -9.64289)
auto_calculate_length_and_angle = false
length = 14.847
bone_angle = -84.2757
metadata/_local_pose_override_enabled_ = true

[node name="Icon" type="Sprite2D" parent="lizard/head/segment2/segment3/leg2/Bone2D/Bone2D2"]
position = Vector2(1.08037, -15.5863)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_ebtar")

[node name="segment4" type="Sprite2D" parent="lizard/head/segment2/segment3"]
top_level = true
position = Vector2(-90, 0)
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="segment5" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4"]
top_level = true
position = Vector2(-125, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="segment6" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5"]
top_level = true
position = Vector2(-165, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="segment7" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6"]
top_level = true
position = Vector2(-201, 0)
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="leg" type="Skeleton2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7"]
top_level = true
z_index = 1
modification_stack = SubResource("SkeletonModificationStack2D_maj5o")
script = ExtResource("4_5pgwc")
hind_leg = true

[node name="RayCast2D" type="RayCast2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/leg"]
position = Vector2(100, 0)
target_position = Vector2(0, 5000)

[node name="target" type="Node2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/leg/RayCast2D"]
top_level = true
position = Vector2(2, 26)

[node name="Bone2D" type="Bone2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/leg"]
rotation = -2.67001
scale = Vector2(0.999937, 0.999937)
rest = Transform2D(-0.672349, -0.740187, 0.740187, -0.672349, 0, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Icon2" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/leg/Bone2D"]
position = Vector2(-4.91805, -8.05118)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_ebtar")

[node name="Bone2D2" type="Bone2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/leg/Bone2D"]
position = Vector2(-4.91805, -8.05118)
rotation = -0.648266
scale = Vector2(0.999846, 0.999846)
rest = Transform2D(-0.478914, -0.877686, 0.877686, -0.478914, -16.4929, -9.64289)
auto_calculate_length_and_angle = false
length = 14.847
bone_angle = -84.2757
metadata/_local_pose_override_enabled_ = true

[node name="Icon" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/leg/Bone2D/Bone2D2"]
position = Vector2(1.08037, -15.5863)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_ebtar")

[node name="segment8" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7"]
top_level = true
position = Vector2(-237, 0)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="leg2" type="Skeleton2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8"]
modulate = Color(0.741385, 0.741385, 0.741385, 1)
top_level = true
z_index = 1
modification_stack = SubResource("SkeletonModificationStack2D_68mym")
script = ExtResource("4_5pgwc")
hind_leg = true

[node name="RayCast2D" type="RayCast2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8/leg2"]
position = Vector2(100, 0)
target_position = Vector2(0, 5000)

[node name="target" type="Node2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8/leg2/RayCast2D"]
top_level = true
position = Vector2(2, 26)

[node name="Bone2D" type="Bone2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8/leg2"]
rotation = -2.67001
scale = Vector2(0.999937, 0.999937)
rest = Transform2D(-0.672349, -0.740187, 0.740187, -0.672349, 0, 0)
metadata/_local_pose_override_enabled_ = true

[node name="Icon2" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8/leg2/Bone2D"]
position = Vector2(-4.91805, -8.05118)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_ebtar")

[node name="Bone2D2" type="Bone2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8/leg2/Bone2D"]
position = Vector2(-4.91805, -8.05118)
rotation = -0.648266
scale = Vector2(0.999846, 0.999846)
rest = Transform2D(-0.478914, -0.877686, 0.877686, -0.478914, -16.4929, -9.64289)
auto_calculate_length_and_angle = false
length = 14.847
bone_angle = -84.2757
metadata/_local_pose_override_enabled_ = true

[node name="Icon" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8/leg2/Bone2D/Bone2D2"]
position = Vector2(1.08037, -15.5863)
scale = Vector2(0.1, 0.1)
texture = ExtResource("9_ebtar")

[node name="segment9" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8"]
top_level = true
position = Vector2(-273, 0)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="segment10" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8/segment9"]
top_level = true
position = Vector2(-304, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="segment11" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8/segment9/segment10"]
top_level = true
position = Vector2(-332, 0)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="segment12" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8/segment9/segment10/segment11"]
top_level = true
position = Vector2(-359, 0)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="segment13" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8/segment9/segment10/segment11/segment12"]
top_level = true
position = Vector2(-382, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="segment14" type="Sprite2D" parent="lizard/head/segment2/segment3/segment4/segment5/segment6/segment7/segment8/segment9/segment10/segment11/segment12/segment13"]
top_level = true
position = Vector2(-402, 0)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_5pgwc")
offset = Vector2(0, -16)
script = ExtResource("3_7a6am")
dist_constraint = 30.0

[node name="hunger_timer" type="Timer" parent="lizard"]
autostart = true

[node name="energy_timer" type="Timer" parent="lizard"]
autostart = true

[node name="sleep_timer" type="Timer" parent="lizard"]
wait_time = 10.0
one_shot = true

[node name="food_container" type="Node2D" parent="."]
script = ExtResource("12_yn76w")

[node name="food_spawn_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
script = ExtResource("14_hvip4")

[connection signal="timeout" from="lizard/head/Timer" to="lizard/head" method="_on_timer_timeout"]
[connection signal="timeout" from="lizard/head/head_shape/eye/Timer" to="lizard/head/head_shape/eye" method="_on_timer_timeout"]
[connection signal="timeout" from="lizard/hunger_timer" to="lizard" method="_tick_hunger"]
[connection signal="timeout" from="lizard/energy_timer" to="lizard" method="_tick_energy"]
[connection signal="timeout" from="lizard/sleep_timer" to="lizard" method="_wake_up"]
[connection signal="timeout" from="food_spawn_timer" to="food_spawn_timer" method="_on_timeout"]
